<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bc_background_azul"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/txtCoala"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="110dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="123dp"
            android:layout_marginRight="123dp"
            android:text="@string/txt_coala_azul"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:fontFamily="@font/rajdhani_semibold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/txtCoala"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="107dp"
            android:layout_marginRight="107dp"
            android:contentDescription="@string/imagem_coala_tbv"
            app:srcCompat="@drawable/coala" />

        <Button
            android:id="@+id/btnIrparaLogin"
            android:layout_width="269dp"
            android:layout_height="47dp"
            android:layout_below="@+id/txt_dando"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="34dp"
            android:background="@drawable/bc_botton_azul"
            android:text="@string/btn_login"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:fontFamily="@font/rajdhani_semibold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnIrparaLogin"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="99dp"
            android:layout_marginLeft="99dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="106dp"
            android:layout_marginRight="106dp"
            android:text="@string/txt_ainda_n_o_tem_conta"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:fontFamily="@font/rajdhani_semibold" />

        <TextView
            android:id="@+id/txt_dando"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="77dp"
            android:layout_marginLeft="77dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="84dp"
            android:layout_marginRight="84dp"
            android:text="@string/txt_dando_suporte_a_voc"
            android:textColor="#FFFFFF"
            android:textSize="19sp"
            app:fontFamily="@font/rajdhani_semibold" />

        <Button
            android:id="@+id/btnIrparaSignup"
            android:layout_width="269dp"
            android:layout_height="47dp"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="37dp"
            android:background="@drawable/bc_second_botton"
            android:text="@string/txt_singup"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:fontFamily="@font/rajdhani_semibold" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="66dp"
            android:layout_marginLeft="66dp"
            android:layout_marginBottom="59dp"
            android:contentDescription="@string/imagem_contagoogle"
            app:srcCompat="@drawable/google" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="82dp"
            android:layout_marginRight="82dp"
            android:layout_marginBottom="59dp"
            android:contentDescription="@string/imagem_contafacebook"
            app:srcCompat="@drawable/facebook" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>