<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_cadastro">

    <RelativeLayout
        android:layout_width="386dp"
        android:layout_height="706dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bc_background_azul"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="66dp"
            android:layout_marginLeft="66dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="75dp"
            android:layout_marginRight="75dp"
            android:text="@string/txt_bem_vindo_novo_amigo"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:fontFamily="@font/rajdhani_semibold" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="112dp"
            android:layout_marginLeft="112dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="124dp"
            android:layout_marginRight="124dp"
            app:srcCompat="@drawable/koalapinkandblue"
            android:contentDescription="@string/imagem_cadastro" />

        <EditText
            android:id="@+id/editText_username_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView5"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="78dp"
            android:layout_marginTop="47dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="#FFFFFF"
            android:layout_marginRight="95dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/txt_username_cadastro"
            android:textColor="#FFFFFF"
            tools:ignore="LabelFor" tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/editText_email_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_username_cadastro"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="116dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/txt_senha"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:text="@string/txt_email_cadastro"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="18sp"
            app:fontFamily="@font/rajdhani_semibold"
            tools:ignore="LabelFor"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_email_cadastro"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="43dp"
            android:layout_marginLeft="43dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/cadastro_txt_senha"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="18sp"
            app:fontFamily="@font/rajdhani_semibold"
            tools:ignore="LabelFor"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button2"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText4"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/bc_botton_azul"
            android:text="@string/scadastro_btn_ignup"
            android:textColor="#FCFFFFFF" />

        <TextView
            android:id="@+id/text_ir_pra_login"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="145dp"
            android:layout_marginLeft="145dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="138dp"
            android:layout_marginRight="138dp"
            android:text="@string/_cadastroj_tem_conta"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:fontFamily="@font/rajdhani_semibold" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>