<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1670A7"
    tools:context=".activity_login">


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bc_background_ranco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/txt_vovo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="37dp"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/txt_bem_vindo_de_volta_amigo"
            android:textColor="#05638C"
            android:textSize="25sp"
            app:fontFamily="@font/rajdhani_semibold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/txt_vovo"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="99dp"
            android:layout_marginLeft="99dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="98dp"
            android:layout_marginRight="98dp"
            android:contentDescription="@string/imagme_koala_login"
            app:srcCompat="@drawable/koala" />

        <EditText
            android:id="@+id/editText_nickname"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/txt_login_name"
            android:textColor="#05638C"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp"
            android:backgroundTint="#05638C"
            app:fontFamily="@font/rajdhani_semibold"
            tools:ignore="LabelFor"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="258dp"
            android:layout_height="46dp"
            android:backgroundTint="#05638C"
            android:layout_below="@+id/editText_nickname"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="39dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:hint="@string/txt_senha"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColorHint="#05638C"
            android:textSize="18sp"
            app:fontFamily="@font/rajdhani_semibold" tools:targetApi="lollipop"/>

        <Button
            android:id="@+id/button"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="39dp"
            android:layout_marginRight="39dp"
            android:background="@drawable/bc_botton_azul"
            android:text="@string/btn_login"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:fontFamily="@font/rajdhani_semibold" />

        <TextView
            android:id="@+id/txt_irCadastrar"
            android:layout_width="149dp"
            android:layout_height="33dp"
            android:layout_below="@+id/button"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="93dp"
            android:layout_marginLeft="93dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="105dp"
            android:layout_marginRight="105dp"
            android:layout_marginBottom="133dp"
            android:text="@string/txt_ainda_n_o_tem_conta"
            android:textSize="16sp"
            app:fontFamily="@font/rajdhani_semibold" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>